--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,9 @@
 [build-system]
 requires = [
     "setuptools>=42",
-    "wheel"
+    "wheel",
+    "numpy>=1.15.0",
+    "pybullet>=3.0.0",
+    "gym>=0.17.1"
 ]
 build-backend = "setuptools.build_meta"
